--- a/platformio.ini
+++ b/platformio.ini
@@ -13,16 +13,19 @@ platform = atmelmegaavr
 board = ATtiny414
 framework = arduino
 build_unflags = 
-    -w  ; Remove warning suppressions
-    
+    -w                                      ; Remove warning suppression
 build_flags = 
-    -Wall           ; Turn on all optional warnings
-    -Werror         ; Force all warnings to be errors
-
+    -Wall                                   ; Turn on all optional warnings
+    -Werror                                 ; Force all warnings to be errors
+    -DSWC_OUTPUT_DISABLE_MS=20              ; Default time required until we send another signal
+    -DSWC_OUTPUT_ENABLE_SHORT_HOLD_MS=80    ; Default time required for radio to read signal
+    -DSWC_OUTPUT_ENABLE_LONG_HOLD_MS=4000   ; Default time required for radio to read claibration signal
 board_build.f_cpu = 20000000L
-
-[env:ATtiny414_debug]
 build_type = debug
 
-[env:ATtiny414_release]
+[env:AndroidStereo]
 build_type = release
+build_flags = 
+    -DSWC_OUTPUT_DISABLE_MS=20              ; Time required until we send another signal
+    -DSWC_OUTPUT_ENABLE_SHORT_HOLD_MS=80    ; Time required for radio to read signal
+    -DSWC_OUTPUT_ENABLE_LONG_HOLD_MS=4000   ; Time required for radio to read claibration signal
