Created Env and required header file for different headunits

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,15 +17,15 @@ build_unflags =
 build_flags = 
     -Wall                                   ; Turn on all optional warnings
     -Werror                                 ; Force all warnings to be errors
-    -DSWC_OUTPUT_DISABLE_MS=20              ; Default time required until we send another signal
-    -DSWC_OUTPUT_ENABLE_SHORT_HOLD_MS=80    ; Default time required for radio to read signal
-    -DSWC_OUTPUT_ENABLE_LONG_HOLD_MS=4000   ; Default time required for radio to read claibration signal
 board_build.f_cpu = 20000000L
 build_type = debug
 
-[env:AndroidStereo]
+[env:AndroidHeadunitGeneric]
 build_type = release
 build_flags = 
-    -DSWC_OUTPUT_DISABLE_MS=20              ; Time required until we send another signal
-    -DSWC_OUTPUT_ENABLE_SHORT_HOLD_MS=80    ; Time required for radio to read signal
-    -DSWC_OUTPUT_ENABLE_LONG_HOLD_MS=4000   ; Time required for radio to read claibration signal
+    -DANDROID_HEADUNIT_GENERIC
+
+[env:SonyHeadunitGeneric]
+build_type = release
+build_flags = 
+    -DSONY_HEADUNIT_GENERIC
