--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,12 @@ build_flags =
 board_build.f_cpu = 20000000L
 build_type = debug
 
-[env:AndroidHeadunitGeneric]
+[env:ANDROID_HEADUNIT_GENERIC]
 build_type = release
 build_flags = 
     -DANDROID_HEADUNIT_GENERIC
 
-[env:SonyHeadunitGeneric]
+[env:SONY_HEADUNIT_GENERIC]
 build_type = release
 build_flags = 
     -DSONY_HEADUNIT_GENERIC
