Fix: Corrected short press duration. Somehow managed to miss this before
Update: Added support for flashing using pymcuprog using onboard serial2updi converter

Update: Added support for long pressing the encoder button

Update: Added basic version control

Update: Improve readme

Created release for V1.0.0

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,17 @@ build_flags =
     -Werror                                 ; Force all warnings to be errors
 board_build.f_cpu = 20000000L
 build_type = debug
+upload_flags =
+    --tool
+    uart
+    --device
+    attiny414
+    --uart
+    $UPLOAD_PORT
+    --clk
+    $UPLOAD_SPEED
+upload_command = pymcuprog write --erase $UPLOAD_FLAGS --filename $SOURCE
+extra_scripts = pre:rename_firmware.py
 
 [env:ANDROID_HEADUNIT_GENERIC]
 build_type = release
