--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env]
+[env:RE_SWC]
 platform = atmelmegaavr
 board = ATtiny414
 framework = arduino
 build_unflags = 
     -w                                      ; Remove warning suppression
+    F_CPU
 build_flags = 
     -Wall                                   ; Turn on all optional warnings
     -Werror                                 ; Force all warnings to be errors
-board_build.f_cpu = 20000000L
+board_build.f_cpu = 2000000L
 build_type = debug
 upload_flags =
     --tool
@@ -30,13 +31,3 @@ upload_flags =
     $UPLOAD_SPEED
 upload_command = pymcuprog write --erase $UPLOAD_FLAGS --filename $SOURCE
 extra_scripts = pre:rename_firmware.py
-
-[env:ANDROID_HEADUNIT_GENERIC]
-build_type = release
-build_flags = 
-    -DANDROID_HEADUNIT_GENERIC
-
-[env:SONY_HEADUNIT_GENERIC]
-build_type = release
-build_flags = 
-    -DSONY_HEADUNIT_GENERIC
