Update: Include pre-build script to change ENV firmware name to include FW version number in build

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 upload_protocol = isp
 debug_tool = wch-link
 platform_packages = tool-openocd-riscv-wch@https://github.com/Community-PIO-CH32V/tool-openocd-riscv-wch.git#darwin_arm
+
+extra_scripts = 
+    pre:rename_firmware.py
