--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ch32]
+[env:RE_SWC]
 platform = https://github.com/Community-PIO-CH32V/platform-ch32v.git
 board = genericCH32X035G8U6 ; The RE_SWC board uses a CH32X035F8U6 MCU, this should be fine but your miles may vary ;)
 framework = arduino
